--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 .logo{
-    margin-left: 7rem;
+    margin-left: 5rem;
     margin-top: 2rem; 
+}
+body{
+    background-color: #f7f7f7;
 }
 .nav{
     margin-right: 3rem;
